--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "^10.4.14",
+    "cypress": "^13.1.0",
     "daisyui": "^3.5.0",
     "eslint": "^8.44.0",
     "jasmine-core": "~4.6.0",
